# VoltageBot

./: .env.example  .gitignore  CHECKPOINT_01.md  CHECKPOINT_02.md  CHECKPOINT_03.md  CHECKPOINT_04.md  CHECKPOINT_05.md  CHECKPOINT_06.md  CHECKPOINT_07.md  CHECKPOINT_08.md  CHECKPOINT_09.md  CHECKPOINT_10.md  ENV_GUIDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  voltage_deploy_guide.md  voltage_env_guide.md
backend/: Dockerfile  README.md  pyproject.toml  smoke_test_checkpoint_03.py  smoke_test_checkpoint_04.py  smoke_test_checkpoint_05.py  smoke_test_checkpoint_06.py  smoke_test_checkpoint_07.py  smoke_test_checkpoint_08.py  smoke_test_checkpoint_09.py  smoke_test_checkpoint_10.py
backend/app/: main.py  seed.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analytics.py  auth.py  backtest.py  balances.py  bot.py  journal.py  operations.py  pairs.py  settings.py  strategy.py  trading.py
backend/app/core/: config.py
backend/app/models/: __init__.py  account.py  common.py  journal.py  market.py  strategy.py  system.py  trade.py
backend/app/schemas/: analytics.py  auth.py  backtest.py  balance.py  bot.py  journal.py  market.py  operations.py  settings.py  strategy.py  trading.py
backend/app/services/: admin_auth.py  ai_review.py  backtest.py  balance_service.py  bot_runtime.py  bybit.py  codex_auth.py  deepseek.py  deploy_ops.py  market_data.py  operations.py  release_manager.py  strategy_engine.py  strategy_registry.py  trading.py
backend/app/strategy/: voltage.md
deploy/: OPERATOR_RUNBOOK.md  PRODUCTION_DEPLOY.md  (+1 more)
(+36 files in other folders)
